# fastapi_vibe_template

./: Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  init_project.py  pyproject.toml
.clinerules/: fastapi_structure.md  practices.md
app/: .env.example  README.md  alembic.ini  database.py  main.py
app/alembic/: script.py.mako
app/alembic/versions/: .gitkeep
app/api/: deps.py
app/api/routers/: __init__.py  health.py
app/core/: config.py  exceptions.py  security.py  utils.py
